resources/mediasearch-variables.less
@import 'mediawiki.skin.variables.less';

// Global MediaSearch variables
// ---------------------------------------------------------
// Use design tokens from Codex in the code when it makes
// sense to do so. Otherwise, create a new extension-specific semantic
// variable here, with prefix sdms- (Structured Data Media Search).

// Colors
// ---------------------------------------------------------
// https://doc.wikimedia.org/codex/latest/style-guide/colors.html
// TODO: Not aN icon color used elsewhere.
@sdms-icon-color--subtle: #a2a9b1;
@sdms-background-color-namespace-label: #eaecf0;
@sdms-background-color-tool--hover: @background-color-interactive-subtle;
@sdms-background-color-tool--focus: @background-color-interactive;
@sdms-background-color-tool--active: @background-color-interactive;
@sdms-background-color-tool--selected: @background-color-progressive;

// Border
// ---------------------------------------------------------
@sdms-border-color-result: #eaecf0;
@sdms-border-color-tool: transparent;
@sdms-border-color-tool--hover: @border-color-interactive;

// Sizes
// ---------------------------------------------------------
@sdms-max-width-base: 50em;

// Spacing
// ---------------------------------------------------------
@sdms-spacing-base: 16px;
@sdms-spacing-sm: (@sdms-spacing-base / 2);
@sdms-spacing-xs: (@sdms-spacing-base / 4);
@sdms-padding-vertical-base: 6px;
@sdms-padding-vertical-tool: 5px;
@sdms-padding-horizontal-base: 12px;
@sdms-margin-horizontal-base: 6px;
@sdms-margin-horizontal-mobile: 8px;
// Needs to result in px value, hence `@min-size-icon-x-small`.
@sdms-padding-end-dropdown: @min-size-icon-x-small + ( 1.5 * @sdms-padding-horizontal-base );

// Mixins
// ---------------------------------------------------------
.sdms-result-box-shadow() {
	box-shadow: 4px 4px 5px -2px @border-color-base;
};

// Taken from OOUI.
.sdms-visually-hidden() {
	display: block;
	position: absolute;
	clip: rect( 1px, 1px, 1px, 1px );
	width: 1px;
	height: 1px;
	margin: -1px;
	border: 0;
	padding: 0;
	overflow: hidden;
}

